[gd_scene load_steps=66 format=3 uid="uid://dotcm5old5v5e"]

[ext_resource type="Shader" path="res://shaders/red_filter.gdshader" id="1_ahgkj"]
[ext_resource type="Script" path="res://escenas/Enemigos/Enemigo1/Script/enemigo.gd" id="1_r2uj7"]
[ext_resource type="Texture2D" uid="uid://bpfifyw4mknt" path="res://assets/personajes/enemigos/Skeleton drunked.png" id="3_kg4c0"]
[ext_resource type="AudioStream" uid="uid://dqqoaqfj3dg0v" path="res://Remind monster (1).ogg" id="6_j7ppe"]
[ext_resource type="AudioStream" uid="uid://brj8d01ug8vbe" path="res://remind monster roaming.ogg" id="7_r2dgr"]
[ext_resource type="Script" path="res://escenas/Enemigos/Enemigo1/Script/hitbox_enemy.gd" id="21_66r1q"]
[ext_resource type="Script" path="res://escenas/Enemigos/Enemigo1/Script/health_enemy.gd" id="23_d82g1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i657e"]
shader = ExtResource("1_ahgkj")
shader_parameter/hit = false

[sub_resource type="AtlasTexture" id="AtlasTexture_ob1ac"]
atlas = ExtResource("3_kg4c0")
region = Rect2(2240, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbxdu"]
atlas = ExtResource("3_kg4c0")
region = Rect2(2176, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wir0p"]
atlas = ExtResource("3_kg4c0")
region = Rect2(2112, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h650s"]
atlas = ExtResource("3_kg4c0")
region = Rect2(2048, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l026v"]
atlas = ExtResource("3_kg4c0")
region = Rect2(1984, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2cg4c"]
atlas = ExtResource("3_kg4c0")
region = Rect2(1920, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm4xd"]
atlas = ExtResource("3_kg4c0")
region = Rect2(1856, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvq07"]
atlas = ExtResource("3_kg4c0")
region = Rect2(1792, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwoj8"]
atlas = ExtResource("3_kg4c0")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_10nng"]
atlas = ExtResource("3_kg4c0")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nev53"]
atlas = ExtResource("3_kg4c0")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dbdt"]
atlas = ExtResource("3_kg4c0")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4xjt"]
atlas = ExtResource("3_kg4c0")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_37xru"]
atlas = ExtResource("3_kg4c0")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rufg3"]
atlas = ExtResource("3_kg4c0")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vfi2"]
atlas = ExtResource("3_kg4c0")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fe282"]
atlas = ExtResource("3_kg4c0")
region = Rect2(1600, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6tbey"]
atlas = ExtResource("3_kg4c0")
region = Rect2(1664, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mep3r"]
atlas = ExtResource("3_kg4c0")
region = Rect2(1728, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_21odt"]
atlas = ExtResource("3_kg4c0")
region = Rect2(1792, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1i16b"]
atlas = ExtResource("3_kg4c0")
region = Rect2(1856, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4so1"]
atlas = ExtResource("3_kg4c0")
region = Rect2(1920, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdk12"]
atlas = ExtResource("3_kg4c0")
region = Rect2(1984, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_epoof"]
atlas = ExtResource("3_kg4c0")
region = Rect2(2048, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c854r"]
atlas = ExtResource("3_kg4c0")
region = Rect2(2112, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pv68k"]
atlas = ExtResource("3_kg4c0")
region = Rect2(2176, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8lbv"]
atlas = ExtResource("3_kg4c0")
region = Rect2(2240, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgu8v"]
atlas = ExtResource("3_kg4c0")
region = Rect2(1600, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4ty6"]
atlas = ExtResource("3_kg4c0")
region = Rect2(1536, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nh8p"]
atlas = ExtResource("3_kg4c0")
region = Rect2(1472, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6xwhh"]
atlas = ExtResource("3_kg4c0")
region = Rect2(1408, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yx8t0"]
atlas = ExtResource("3_kg4c0")
region = Rect2(1344, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmxp7"]
atlas = ExtResource("3_kg4c0")
region = Rect2(1280, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xw8tt"]
atlas = ExtResource("3_kg4c0")
region = Rect2(1216, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l8weh"]
atlas = ExtResource("3_kg4c0")
region = Rect2(1152, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_026ot"]
atlas = ExtResource("3_kg4c0")
region = Rect2(1088, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl1cx"]
atlas = ExtResource("3_kg4c0")
region = Rect2(1024, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tndi7"]
atlas = ExtResource("3_kg4c0")
region = Rect2(960, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvxwi"]
atlas = ExtResource("3_kg4c0")
region = Rect2(896, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ee4du"]
atlas = ExtResource("3_kg4c0")
region = Rect2(832, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xbv6"]
atlas = ExtResource("3_kg4c0")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vij5a"]
atlas = ExtResource("3_kg4c0")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0d8l8"]
atlas = ExtResource("3_kg4c0")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5yayx"]
atlas = ExtResource("3_kg4c0")
region = Rect2(832, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8pbk"]
atlas = ExtResource("3_kg4c0")
region = Rect2(896, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ps7wo"]
atlas = ExtResource("3_kg4c0")
region = Rect2(960, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1m0i1"]
atlas = ExtResource("3_kg4c0")
region = Rect2(1024, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uyjnj"]
atlas = ExtResource("3_kg4c0")
region = Rect2(1088, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yl6o0"]
atlas = ExtResource("3_kg4c0")
region = Rect2(1152, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sl76a"]
atlas = ExtResource("3_kg4c0")
region = Rect2(1216, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_26d05"]
atlas = ExtResource("3_kg4c0")
region = Rect2(1280, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eyf2b"]
atlas = ExtResource("3_kg4c0")
region = Rect2(1344, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xncnu"]
atlas = ExtResource("3_kg4c0")
region = Rect2(1408, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_jj5mg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ob1ac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbxdu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wir0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h650s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l026v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2cg4c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm4xd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvq07")
}],
"loop": true,
"name": &"attack_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwoj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10nng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nev53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dbdt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4xjt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37xru")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rufg3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vfi2")
}],
"loop": true,
"name": &"attack_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fe282")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tbey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mep3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_21odt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1i16b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4so1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdk12")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epoof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c854r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pv68k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8lbv")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgu8v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4ty6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nh8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6xwhh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yx8t0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmxp7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xw8tt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8weh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_026ot")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl1cx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tndi7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvxwi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ee4du")
}],
"loop": true,
"name": &"walk_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xbv6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vij5a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0d8l8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5yayx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8pbk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ps7wo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1m0i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uyjnj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yl6o0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sl76a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_26d05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eyf2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xncnu")
}],
"loop": true,
"name": &"walk_right",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cfc6h"]
size = Vector2(27, 78.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p6rjb"]
size = Vector2(17, 78)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ank5r"]
size = Vector2(66, 78)

[node name="Enemigo" type="CharacterBody2D" groups=["enemigo"]]
material = SubResource("ShaderMaterial_i657e")
script = ExtResource("1_r2uj7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -38)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_jj5mg")
animation = &"attack_left"
frame_progress = 0.436544

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(-4.5, -37.75)
shape = SubResource("RectangleShape2D_cfc6h")
one_way_collision = true

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(-42, -82)
target_position = Vector2(0, 90)
collision_mask = 5
collide_with_areas = true

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource("21_66r1q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(-23.5, -38)
shape = SubResource("RectangleShape2D_p6rjb")

[node name="HealthComponent" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
script = ExtResource("23_d82g1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HealthComponent"]
position = Vector2(1, -38)
shape = SubResource("RectangleShape2D_ank5r")

[node name="MuerteEnemigo" type="AudioStreamPlayer2D" parent="." groups=["audio"]]
stream = ExtResource("6_j7ppe")
volume_db = -3.0

[node name="SonidoNormal" type="AudioStreamPlayer2D" parent="."]

[node name="SonidoRugido" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("7_r2dgr")
volume_db = -10.0

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_looped" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_looped"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_hurt_timer_timeout"]
[connection signal="onDamageTook" from="HealthComponent" to="." method="_on_health_component_on_damage_took"]
[connection signal="onDead" from="HealthComponent" to="." method="_on_health_component_on_dead"]
